...
  Scaffold(
      topBar = {
        TopAppBar(
            navigationActions,
            stringResource(R.string.card_screen_description)
...
                    .padding(padding)
                    .padding(32.dp)
                    .testTag("ParkingDetailsColumn")) {
              item {
                Row(
...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 8.dp)
                            .testTag("TopInteractionRow"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween) {
...
                                  maxCharacters = MAX_NOTE_LENGTH,
                                  maxLines = 2,
                                  testTag = "NoteInputText")
                            } else {
                              if (userSignedIn) {
...
                                                else FontStyle.Normal),
                                    textAlign = TextAlign.Left,
                                    modifier = Modifier.testTag("NoteText"))
                              }
                            }
...
                                            }
                                          }
                                          .testTag("SaveNoteIcon"))
                            } else {
                              // Add icon if no note, Edit icon if note exists
...
                                                      .show()
                                            }
                                            .testTag("AddNoteIcon"))
                              } else {
                                Icon(
...
                                    modifier =
                                        Modifier.clickable { editingNote.value = true }
                                            .testTag("EditNoteIcon"))
                              }
                            }
...
                                        }
                                        .rotate(45f)
                                        .testTag("PinIcon"))

                            // Favorite Icon
...
                                        }
                                        .testTag(
                                            if (isFavorite) "RedFilledFavoriteIcon"
                                            else "BlackOutlinedFavoriteIcon"))
                          }
                    }
...
                        Modifier.fillMaxWidth()
                            .padding(vertical = 8.dp)
                            .testTag("AverageRatingRow"),
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.SpaceBetween) {
...
                                  textDecoration = TextDecoration.Underline),
                          color = MaterialTheme.colorScheme.primary,
                          testTag = "SeeAllReviewsText",
                          modifier =
                              Modifier.clickable {
...
                          LazyRow(
                              modifier =
                                  Modifier.weight(2f).fillMaxHeight().testTag("ParkingImagesRow"),
                              horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                                itemsIndexed(
...
                          modifier = Modifier.fillMaxWidth().testTag("RowCapacityRack"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("CapacityColumn")) {
                              Text(
                                  text = stringResource(R.string.card_screen_capacity),
...
                                  color = MaterialTheme.colorScheme.onSurface)
                            }
                            Column(modifier = Modifier.weight(1f).testTag("RackTypeColumn")) {
                              Row(verticalAlignment = Alignment.CenterVertically) {
                                Text(
...
                          modifier = Modifier.fillMaxWidth().testTag("RowProtectionPrice"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("ProtectionColumn")) {
                              Text(
                                  text = stringResource(R.string.card_screen_protection),
...
                                  color = MaterialTheme.colorScheme.onSurface)
                            }
                            Column(modifier = Modifier.weight(1f).testTag("PriceColumn")) {
                              Text(
                                  text = stringResource(R.string.card_screen_price),
...
                          modifier = Modifier.fillMaxWidth().testTag("RowSecurity"),
                          horizontalArrangement = Arrangement.SpaceBetween) {
                            Column(modifier = Modifier.weight(1f).testTag("SecurityColumn")) {
                              Text(
                                  text = stringResource(R.string.card_screen_surveillance),
...

                Column(
                    modifier = Modifier.fillMaxWidth().testTag("ButtonsColumn"),
                    verticalArrangement = Arrangement.spacedBy(16.dp)) {
                      Button(
...
                          modifier = Modifier.fillMaxWidth(),
                          colorLevel = ColorLevel.PRIMARY,
                          testTag = "ShowInMapButton")

                      if (userViewModel.currentUser.collectAsState().value != null) {
...
